Massively improved part2
Signed-off-by: Frederick Gross <artemis@stuerz.xyz>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 [dependencies]
 aoc-runner = "0.3.0"
 aoc-runner-derive = "0.3.0"
+arrayvec = "0.7.6"
 mimalloc = { version = "0.1.43", default-features=false }
 nohash-hasher = "0.2.0"
 
