--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+aho-corasick = "1.1.3"
 aoc-runner = "0.3.0"
 aoc-runner-derive = "0.3.0"
 arrayvec = "0.7.6"
